# exai-search-demo

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  exa_people_search_eval.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  live-validation.yml
assets/: live_validation_schema.json
benchmarks/: insurance_cat_queries.json
docs/: demo-gallery.md  exai-insurance-intel-improvements.md  integration-boundaries.md  issue-tracker.md  rebuild_review.md  roadmap.md
docs/adr/: ADR-0001-roadmap-governance.md
docs/sessions/: 2026-03-10-phase1-cli-installability.md  2026-03-10-phase1-foundation-start.md  2026-03-10-roadmap-baseline.md  2026-03-11-comparison-markdown-notebook-parity.md  2026-03-11-phase1-eval-taxonomy-reporting.md  2026-03-18-phase2-parallel-slices.md  2026-03-19-phase3-export-outputs-and-smoke-rails.md  2026-03-19-phase3-integration-boundaries-and-lint-expansion.md  2026-03-19-phase3-manual-live-validation.md  2026-03-19-phase3-research-benchmarks-rails.md  2026-03-20-phase4-refactor-decomposition.md  2026-03-21-cli-runtime-cleanup.md  2026-03-21-payload-boundary-cleanup.md
scripts/: reset_cache.py  run_live_validation.py  run_notebook_smoke.py
src/exa_demo/: __init__.py  api_models.py  artifact_manifest.py  artifacts.py  cli.py  cli_eval.py  cli_parser.py  cli_runtime.py  client.py  client_payloads.py  client_smoke.py  comparison_analysis.py  comparison_reporting.py  cost_model.py  endpoint_workflows.py  evaluation.py  models.py  ranked_workflows.py  reporting.py  workflows.py
tests/: test_artifacts.py  test_cli.py  test_cli_runtime.py  test_client.py  test_cost_model.py  test_evaluation.py  test_models.py  test_reporting.py  test_scripts.py  test_workflow_builders.py
