[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exai-insurance-intel"
version = "0.1.0"
description = "Exa-powered insurance intelligence toolkit for CAT-loss, claims, expert, contractor, and market research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "pandas==2.2.3",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
  "nbclient==0.10.2",
  "nbformat==5.10.4",
  "pre-commit==4.1.0",
  "pytest==8.3.5",
  "ruff==0.9.10",
]

[project.scripts]
exa-demo = "exa_demo.cli:main"
exai-insurance-intel = "exa_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
  "benchmarks",
  "docs",
  "experiments",
  "exa_people_search_eval.ipynb",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F541"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
